--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
 <title>Website with Left Menu, Heading, Dropdowns, Tabs, and Table</title>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="sidebar neumorphic">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Network Plan</a></li>
+                <li><a href="#">Demand Flow</a></li>
+                <li><a href="#">Performance Report</a></li>
             </ul>
         </div>
         <div class="content">
-            <div class="heading">Welcome to My Website</div>
-            <p>This is a sample website with a neumorphic left menu, heading, and a left border.</p>
-            <p>You can add more content here.</p>
+            <div class="heading">Network Planning System</div>
             <div class="dropdowns">
                 <select class="dropdown">
                     <option>Select a vendor</option>
@@ -36,13 +33,14 @@
                 </select>
             </div>
             <div class="tabs">
-                <div class="tab active">Summary</div>
+                <div class="tab">Summary</div>
                 <div class="tab">Transfers</div>
             </div>
             <div class="table-container neumorphic">
-                <table class="neumorphic-table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
+                            <th>S.No</th>
                             <th>Source</th>
                             <th>Destination</th>
                             <th>Week Date</th>
@@ -52,11 +50,44 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>filter data...</td>
-                            <td>filter data...</td>
-                            <td>filter data...</td>
-                            <td>filter data...</td>
-                            <td>filter data...</td>
+                            <td>1</td>
+                            <td>Warehouse A</td>
+                            <td>Store 1</td>
+                            <td>19 April, 2024</td>
+                            <td>1000</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Warehouse B</td>
+                            <td>Store 2</td>
+                            <td>01 June, 2024</td>
+                            <td>1500</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Germany</td>
+                            <td>France</td>
+                            <td>12 May, 2024</td>
+                            <td>1200</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Italy</td>
+                            <td>Spain</td>
+                            <td>23 May, 2024</td>
+                            <td>1100</td>
+                            <td>10</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Canada</td>
+                            <td>Mexico</td>
+                            <td>14 June, 2024</td>
+                            <td>1300</td>
+                            <td>8</td>
                         </tr>
                     </tbody>
                 </table>
@@ -68,5 +99,8 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
