--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <div class="container">
         <div class="sidebar neumorphic">
+            <div class="logo">
+                <img src="logo.jpg" alt="Logo" width="400" height="300">
+                <h2>NPS</h2>
+            </div>
             <ul>
                 <li><a href="#">Network Plan</a></li>
                 <li><a href="#">Demand Flow</a></li>
