--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     </div>
     <script>
         const data = {
-        labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+        labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October'],
         datasets: [{
-            label: 'Dataset 1',
-            data: [65, 59, 80, 81, 56, 55, 40],
+            label: 'User Increase',
+            data: [65, 59, 80, 81, 56, 55, 40, 75, 60, 70],
             borderColor: '#007bff',
             backgroundColor: 'rgba(0, 123, 255, 0.1)',
             tension: 0.4, 
