--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -11,7 +11,6 @@
     <div class="container">
         <div class="sidebar neumorphic">
             <div class="logo">
-                <img src="logo1.png" alt="Company Logo" width="400" height="300">
                 <h2>NPS</h2>
             </div>
             <ul>
@@ -23,19 +22,19 @@
         <div class="content">
             <div class="heading">Network Planning System</div>
             <div class="dropdowns">
-                <select id="selected-option" class="dropdown">
+                <select id="selected-vendor" class="dropdown">
                     <option value="" disabled selected>Select a vendor</option>
                     <option>Vendor 1</option>
                     <option>Vendor 2</option>
                     <option>Vendor 3</option>
                 </select>
-                <select id="selected-option" class="dropdown">
+                <select id="selected-family-code" class="dropdown">
                     <option value="" disabled selected>Select a family code</option>
                     <option>Code 1</option>
                     <option>Code 2</option>
                     <option>Code 3</option>
                 </select>
-                <select id="selected-option" class="dropdown">
+                <select id="selected-site" class="dropdown">
                     <option value="" disabled selected>Select a site</option>
                     <option>Site 1</option>
                     <option>Site 2</option>
@@ -100,7 +99,6 @@
                             <td>1700</td>
                             <td>9</td>
                         </tr>
-                        
                     </tbody>
                 </table>
                 <button class="download-btn" onclick="downloadCSV()">Download</button>
@@ -114,77 +112,6 @@
             </div>
         </div>
     </div>
-    <script>
-        const data = {
-        labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October'],
-        datasets: [{
-            label: 'User Increase',
-            data: [65, 59, 80, 81, 56, 55, 40, 75, 60, 70],
-            borderColor: '#007bff',
-            backgroundColor: 'rgba(0, 123, 255, 0.1)',
-            tension: 0.4, 
-            fill: true, 
-            borderWidth: 2 
-        }]
-        };
-
-
-        const config = {
-        type: 'line',
-        data: data,
-        options: {
-            responsive: true,
-            plugins: {
-            legend: {
-                position: 'top', 
-            },
-            tooltip: {
-                mode: 'index', 
-            }
-            },
-            scales: {
-            x: {
-                display: true,
-                title: {
-                display: true,
-                text: 'Month'
-                }
-            },
-            y: {
-                display: true,
-                title: {
-                display: true,
-                text: 'Value'
-                }
-            }
-            }
-        },
-        };
-
-
-        const ctx = document.getElementById('myLineChart').getContext('2d');
-
-
-        const myLineChart = new Chart(ctx, config);
-
-                function downloadCSV() {
-                    const rows = document.querySelectorAll("table tr");
-                    let csvContent = "data:text/csv;charset=utf-8,";
-
-                    rows.forEach(row => {
-                        const cols = row.querySelectorAll("td, th");
-                        const rowData = Array.from(cols).map(col => col.innerText).join(",");
-                        csvContent += rowData + "\r\n";
-                    });
-
-                    const encodedUri = encodeURI(csvContent);
-                    const link = document.createElement("a");
-                    link.setAttribute("href", encodedUri);
-                    link.setAttribute("download", "table_data.csv");
-                    document.body.appendChild(link);
-                    link.click();
-                    document.body.removeChild(link);
-                }
-            </script>
-        </body>
-        </html>
+    <script src="script.js"></script>
+</body>
+</html>
